eks/manifests/tekton/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    # annotations:
  labels:
    app.kubernetes.io/instance: tekton-desktop
    app.kubernetes.io/name: tekton-desktop
  name: tekton-desktop
  namespace: tekton-pipelines
spec:
  ingressClassName: internal-nginx
  rules:
  - host: tekton-ui.dev.example.com
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - tekton-ui.dev.example.com
    secretName: wildcard-dev-example-com
